Remove "Akka Platform" as a concept, part 2 (#861)

--- a/index.html
+++ b/index.html
@@ -260,15 +260,11 @@ description: Build powerful reactive, concurrent, and distributed applications i
                     data-category="OSS akka.io Clicks" data-label="Promo Panel - Akka Platform - Logo Link">
                     <img src="resources/images/akka_full_color.svg">
                 </a>
-                <p>Get the full power of Akka reactive microservices frameworks and runtimes on prem or in the cloud</p>
+                <p>Get the full power of Akka reactive microservices frameworks and runtimes</p>
                 <div>
                     <a class="oss-track-link-label" data-category="OSS akka.io Clicks"
-                        data-label="Promo Panel - Akka Platform - Documentation Link"
+                        data-label="Promo Panel - Akka - Documentation Link"
                         href="https://developer.lightbend.com/docs/akka-platform-guide/index.html">Documentation</a>
-                    |
-                    <a class="oss-track-link-label" data-category="OSS akka.io Clicks"
-                        data-label="Promo Panel - Akka Platform - Example Projects Link"
-                        href="https://www.lightbend.com/akka-platform/developers#example-projects">Example Projects</a>
                 </div>
             </div>
         </div>
