--- a/try-akka/index.html
+++ b/try-akka/index.html
@@ -21,7 +21,6 @@ title: Try Akka
       <p>Akka provides APIs for Java and Scala and supports Maven, Gradle, and sbt for building concurrent and distributed systems. Options for using Akka technologies for application development include:</p>
       <ul class="bullets">
         <li>The completely do-it-yourself (DIY) method</li>
-        <li>Dependencies managed and billed through cloud providers like AWS and GCP</li>
         <li>Kalix, managed by Lightbend</li>
       </ul>
     </div>
@@ -29,7 +28,7 @@ title: Try Akka
   <div class="row">
     <div class="twelvecol">
       <h2>Manage Akka yourself (DIY)</h2>
-      <p>Many of us want to explore and manage things on our own, so we have a <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - guided tutorial" href="https://developer.lightbend.com/docs/akka-platform-guide/microservices-tutorial/index.html">guided tutorial</a> for building a microservices proof-of-concept application with various Akka modules. The tutorial is from the <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Platform Guide" href="https://developer.lightbend.com/docs/akka-platform-guide/index.html">Akka Platform Guide</a>, which provides details for using the Akka Operator for Kubernetes and other features for becoming successful with Akka in your team. </p>
+      <p>Many of us want to explore and manage things on our own, so we have a <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - guided tutorial" href="https://developer.lightbend.com/docs/akka-platform-guide/microservices-tutorial/index.html">guided tutorial</a> for building a microservices proof-of-concept application with various Akka modules. The tutorial is from the <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Guide" href="https://developer.lightbend.com/docs/akka-platform-guide/index.html">Akka Guide</a>, which provides details for using the Akka Operator for Kubernetes and other features for becoming successful with Akka in your team. </p>
       <p><i>Want to go deep into the fundamentals of Akka? Learn about <strong>Akka Actors</strong> in <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Scala" href="https://developer.lightbend.com/guides/akka-quickstart-scala/">Scala</a> and <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Java" href="https://developer.lightbend.com/guides/akka-quickstart-java/">Java</a>.</i></p>
     </div>
   </div>
@@ -38,40 +37,6 @@ title: Try Akka
       <br>
       <a class="oss-track-link-label btn" data-category="OSS akka.io Clicks" data-label="Try Akka - CTA Button - Try Akka with Scala or Java"  href="https://developer.lightbend.com/docs/akka-platform-guide/microservices-tutorial/index.html">Try Akka with Scala or Java</a>
     </div>
-  </div>
-  <div class="row">
-    <div class="twelvecol">
-      <h2>Manage Akka through your cloud provider</h2>
-      <p>Many teams would prefer to have their Akka-powered application, and its dependencies, deployed and billed directly through their existing cloud provider. If you’re looking to deploy Akka to AWS or GCP, Lightbend provides <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Inline Link - Akka Cloud Platform" href="https://www.lightbend.com/akka-cloud-platform">Akka Cloud Platform</a>–the organization-friendly way to utilize the power of Akka in a simpler, pay-as-you-go billing method.</p>
-    </div>
-  </div>
-  <div class="row center buffer-row">
-    <div class="onecol">&nbsp;</div>
-    <div class="fivecol">
-        <div class="akka-lightbend-promo cloud-provider">
-            <a href="https://aws.amazon.com/marketplace/pp/prodview-cfpp7sft2d6mi" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Logo Link - AWS">
-                <img src="../resources/images/aws.svg">
-            </a>
-            <div>
-                <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Link - Amazon Marketplace" href="https://aws.amazon.com/marketplace/pp/prodview-cfpp7sft2d6mi">Amazon Marketplace</a>
-                |
-                <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Link - Documentation (AWS Install)" href="https://developer.lightbend.com/docs/akka-platform-guide/deployment/aws-index.html">Documentation</a>
-            </div>
-        </div>
-      </div>
-      <div class="fivecol">
-        <div class="akka-lightbend-promo cloud-provider">
-            <a href="https://console.cloud.google.com/marketplace/details/lightbend-public/akka-cloud-platform?rif_reserved" class="logo-link oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Logo Link - Google Cloud">
-                <img src="../resources/images/google-cloud.svg">
-            </a>
-            <div>
-                <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Link - Google Marketplace" href="https://console.cloud.google.com/marketplace/details/lightbend-public/akka-cloud-platform?rif_reserved">Google Marketplace</a>
-                |
-                <a class="oss-track-link-label" data-category="OSS akka.io Clicks" data-label="Try Akka - Promo Panel - Link - Documentation (GCP Install)" href="https://developer.lightbend.com/docs/akka-platform-guide/deployment/gcp-install.html">Documentation</a>
-            </div>
-        </div>
-    </div>
-    <div class="onecol">&nbsp;</div>
   </div>
 
   <div class="row">
