Change Kalix tagline (#868)

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ description: Build powerful reactive, concurrent, and distributed applications i
                     data-label="Promo Panel - Kalix - Logo Link">
                     <img src="resources/images/kalix-logo-black.svg" style="margin-top: 18px; margin-bottom: 18px">
                 </a>
-                <p>Build stateful, high performance, back-end services and APIs on a powerful serverless PaaS</p>
+                <p>High-performance microservices and APIs with no operations required</p>
                 <div>
                     <a class="oss-track-link-label" data-category="OSS akka.io Clicks"
                         data-label="Promo Panel - Kalix - Documentation Link"
