Update license change to past form (#869)

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ description: Build powerful reactive, concurrent, and distributed applications i
         <div class="onecol">&nbsp;</div>
         <div class="tencol">
         <h2 class="h1">Akka Licensing Change</h2>
-        <p>Lightbend is changing the license on all Akka modules from Apache 2.0 to the BSL v1.1
-            (Business Source License) starting with Akka v2.7, which will be delivered in October. </p>
+        <p>Lightbend changed the license on all Akka modules from Apache 2.0 to the BSL v1.1
+            (Business Source License) starting with Akka v2.7, which was released in October 2022. </p>
         <p><a href="https://lightbend.com/akka/license-faq">Read the FAQ</a> and visit <a href="https://lightbend.com/akka#pricing">Lightbend.com</a> for more details and to learn what this means for
             organizations with less than $25M in annual revenue and for those with over $25M in annual
             revenue.</p>
